[tool.poetry]
name = "beerbot"
version = "0.1.0"
description = "Discord bot for Beer Party server"
authors = ["AlekseyZz <Aleksey#4360>", "code-debug228 <dmemsm#3179>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.5.1"
pendulum = "^2.1.2"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
my-script = "src.main"
